// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el ProductCard Debe de renderizar el componente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;

exports[`Pruebas en el ProductCard debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
